# ETHbox

./: .gitignore  DOCS_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.claude/: skill.md
contracts/: AllowedMethodsEnforcer.sol  AllowedTargetsEnforcer.sol  ValueLimitEnforcer.sol
docs/: caveat-testing-assessment.md
poc/: caveats.py  constants.py  delegation.py  enforcers.py  fork.py  main.py  price.py  swap.py
tests/: conftest.py  test_caveats.py  test_caveats_local.py  test_caveats_unit.py  test_delegation_local.py  test_delegation_unit.py  test_integration.py  test_integration_fork.py  test_multitoken_unit.py
